gke/multi-cluster/k8s-manifests/deployment.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whereami
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whereami
      version: v1
  template:
    metadata:
      labels:
        app: whereami
        version: v1
    spec:
      containers:
      - name: whereami
        image: us-west1-docker.pkg.dev/logan-gallagher/cloud-run-source-deploy/whereami:latest
        ports:
          - containerPort: 8080
      serviceAccountName: demo
